currency-converter-view functionality added

--- a/apps/currency-converter-page/src/app/global.css
+++ b/apps/currency-converter-page/src/app/global.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@theme {
+  --color-mint-500: oklch(0.72 0.11 178);
+}
+
+
 html {
   -webkit-text-size-adjust: 100%;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
